<resources>
    <string name="app_name">Rikuwa_administrador</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_unidades">Gestiornar Unidades</string>
    <string name="menu_productos">Gestionar Productos</string>
    <string name="menu_horarios">Gestionar Horarios</string>
    <string name="menu_recorrido">Agregar Recorrido</string>
    <string name="menu_usuario">Agregar Usuarios</string>
    <string name="menu_mensaje">Enviar Mensaje</string>
    <string name="home_second">Home Second</string>
</resources>
